--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
         transition-delay: 0s, 0s;
 }
 h1 {
-    text-align: center;
+    text-align: left;
     display: block;
     padding: .375rem .75rem;
     padding-top: 0.375rem;
@@ -60,8 +60,12 @@ h1 {
     padding-left: 0.75rem;
 }
 #aboutme {
-    text-align: center;
     display: block;
+    padding: .375rem .75rem;
+    padding-top: 0.375rem;
+    padding-right: 0.75rem;
+    padding-bottom: 0.375rem;
+    padding-left: 0.75rem;
 }
 footer {
     text-align: center;
